# xsoc_stm32l0

./: CMakeLists.txt
CMSIS/Device/ST/STM32L0xx/Source/Templates/gcc/linker/: STM32L010C6Tx_FLASH.ld
rm0451/: DMA.hpp  config.hpp  defs.hpp  rcc.hpp
rm0451/clocks/sources/: hse.cpp
rm0451/peripherals/ADC/: ADC.cpp  ADC.hpp
rm0451/peripherals/GPIO/: GPIO.cpp  GPIO.hpp  base.hpp  gpio_ll.hpp
rm0451/peripherals/SPI/: SPI.cpp  SPI.hpp
rm0451/peripherals/Timer/: LPTIM.cpp  LPTIM.hpp
rm0451/peripherals/USART/: DMA.cpp  DMA.hpp  LPUART.hpp  USART.cpp  USART.hpp  base.hpp  usart_ll.hpp
rm0451/peripherals/internal_flash/: internal_flash.cpp  internal_flash.hpp  internal_flash_ll.hpp  option_bytes.cpp  option_bytes.hpp
rm0451/system/mcu/: mcu.hpp
rm0451/system/pwr/: pwr.cpp  pwr.hpp
rm0451/utils/: tick_counter.cpp  tick_counter.hpp  wait_until.cpp  wait_until.hpp
